--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,53 +1,56 @@
-* {
+*{
     margin: 0;
     padding: 0;
 }
 
-html, body {
-    height: 100%;
+html, body, .div-body-container {
     width: 100%;
+    height: 100%;
 }
 
 body {
-    align-items: center;
-    background-image: url("../img/stars.png");
+    background-color: black;
     color: white;
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-}
-
-a {
-    color: white;
-}
-
-.div-info-container {
-    background-color: #FFFFFF44;
-    border-radius: 5%;
-    border: 1px solid #fff;
-    padding: 15px;
-    width: 40%;
-}
-
-.div-info {
-    margin: 20px;
 }
 
 .div-header {
-    font-size: 1.5rem;
-    font-weight: bold;
+    background-color: #101417;
+    border-bottom: 6px solid #0d1015;
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
 }
 
-.div-body {
-    font-size: 1.1rem;
-    margin-left: 10px;
+.div-header .div-title {
+    cursor: default;
+    font-size: 1.8rem;
+    margin: 20px;
 }
 
-.orange {
-    color: #1ffa81;
-    display: inline;
+.div-menus {
+    display: flex;
+    flex-flow: row;
+    margin-top: 18px;
+    margin-right: 60px;
 }
 
-.underline {
-    text-decoration: underline;
+.div-header .div-menus {
+    font-size: 1.4rem;
+}
+
+.div-menu {
+    margin: 10px;
+}
+
+.div-content {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    height: 90%;
+}
+
+.div-wip {
+    cursor: default;
+    font-size: 3rem;
+    text-align: center;
 }
