--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -44,6 +44,11 @@ body {
     text-decoration: none;
 }
 
+.div-header .div-menus a.selected {
+    color: #06dd51;
+    text-decoration: none;
+}
+
 .div-header .div-menus a:hover {
     text-decoration: underline;
 }
